--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "host": "vite --host"
   },
   "devDependencies": {
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-glsl": "^1.3.1"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "lil-gui": "^0.20.0",
     "three": "^0.151.3"
   }
 }
