--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "imagesloaded": "^5.0.0",
     "lil-gui": "^0.20.0",
     "three": "^0.151.3"
   }
